--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<html>
-  <head>
-  </head>
-  <body>
-  <h1>Hello World!</h1>
-  <p>My name is @crichID</p>
-  </body>
-</html>
+---
+layout: index
+section-type: index
+sitemap:
+  priority: 1.0
+---
+<!--
+If you want to have a static message in your intro layout, disable the dynamic-typing in the _config.yml and write here your text
+-->
